--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -121,6 +121,9 @@
   <data name="Compared_Child" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Compared_Child.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Compared_Child_Remix" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Compared_Child_Remix.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Trapped_In_The_Past" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Trapped_In_The_Past.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
